add images and buttons

--- a/public/index.html
+++ b/public/index.html
@@ -36,51 +36,47 @@
             <div class="container-fluid">
                 <img class="logo-block" src="images/logo.png" alt="logo">
             </div>
+            <nav>
+                <ul class="nav">
+            <li class="nav-item-right">
+                    <button type="button" class="btn btn-outline-info my-2 my-sm-0">Log In</button>
+                </li>
+                &nbsp
+                <li class="nav-item-right">
+                    <button type="button" class="btn btn-outline-info my-2 my-sm-0">Register</button>
+                </li>
+                &nbsp
+                <li class="nav-item-right">
+                    <button type="button" class="btn btn-outline-info my-2 my-sm-0">Help</button>
+                </li>
+            </ul>
+        </nav>
 
         </header>
 
         <nav>
             <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
+                 <li>
+                    <nav class="navbar navbar-light bg-light">
+                        <form class="form-inline">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+                        </form>
+                    </nav>
                 </li>
             </ul>
 
         </nav>
 
-
+&nbsp
         <slider>
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                      <div class="carousel-item active">
-                        <img class="slider-block w-100" src="images/Home_page_1.jpg" alt="First slide">
+                        <img class="slider-block w-100" src="images/matheus-vinicius-483878-unsplash.jpg" alt="First slide">
                      </div>
                     <div class="carousel-item">
-                         <img class="slider-block w-100" src="images/Home_page_1a.jpg" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                         <img class="slider-block w-100" src="images/Home_page_2.jpg" alt="Third slide">
-                    </div>
-                    <div class="carousel-item">
-                         <img class="slider-block w-100" src="images/Home_page_3.jpg" alt="Third slide">
-                    </div>
-                    <div class="carousel-item">
-                         <img class="slider-block w-100" src="images/Home_page_3a.jpg" alt="Third slide">
-                    </div>
-                    <div class="carousel-item">
-                         <img class="slider-block w-100" src="images/Home_page_3b.jpg" alt="Third slide">
-                    </div>
-                    <div class="carousel-item">
-                         <img class="slider-block w-100" src="images/Home_page_4.jpg" alt="Third slide">
+                         <img class="slider-block w-100" src="images/kaori-aoshim-378196-unsplash.jpg" alt="Second slide">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -94,10 +90,96 @@
             </div>
         </slider>
 
+        <div class="container">
+
+            <h1>Explore Patient Landing</h1>
+            <p>Patient Landing is a service to help service providers and social workers match patients to the appropriate space for their stage of care.</p>
+            <h1>Shelters in your Area</h1>
+        </div>
+
+        <div class="row">
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="images/communityhope.jpg" alt="Community of Hope"></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Community of Hope</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="images/lutherplace.jpg" alt="Luther Place"></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Luther Place</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="images/GRM20Exterior.jpg" alt="Gospel Rescue Ministries"></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Gospel Rescue Ministries</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="images/coh.jpg" alt="Coalition for Homeless"></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Coalition for Homeless</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="images/centralunion.jpg" alt="Central Union Mission"></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Central Union Mission</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="images/ccnv_img.jpg" alt="CCNV"></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">CCNV</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /.row -->
+
         <footer>
             <ul class="nav">
                 <li class="nav-item-2">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#">Terms and Conditions</a>
+                </li>
+                <li class="nav-item-2">
+                    <a class="nav-link" href="#">Privacy Policy</a>
+                </li>
+                <li class="nav-item-2">
+                    <a class="nav-link" href="#">HIPAA Compliance</a>
+                </li>
+                <li class="nav-item-2">
+                    <a class="nav-link" href="#">Data Usage Policy</a>
                 </li>
             </ul>
         </footer>
