--- a/public/index.html
+++ b/public/index.html
@@ -168,17 +168,17 @@
       <!-- /.row -->
 
         <footer>
-            <ul class="nav">
-                <li class="nav-item-2">
+            <ul class="nav-item-2">
+                <li class="nav-item">
                     <a class="nav-link" href="#">Terms and Conditions</a>
                 </li>
-                <li class="nav-item-2">
+                <li class="nav-item">
                     <a class="nav-link" href="#">Privacy Policy</a>
                 </li>
-                <li class="nav-item-2">
+                <li class="nav-item">
                     <a class="nav-link" href="#">HIPAA Compliance</a>
                 </li>
-                <li class="nav-item-2">
+                <li class="nav-item">
                     <a class="nav-link" href="#">Data Usage Policy</a>
                 </li>
             </ul>
