--- a/public/index.html
+++ b/public/index.html
@@ -38,17 +38,65 @@
             </div>
             <nav>
                 <ul class="nav">
-            <li class="nav-item-right">
-                    <button type="button" class="btn btn-outline-info my-2 my-sm-0">Log In</button>
+                    <li>
+                        <button type="button" class="btn btn-outline-info my-2 my-sm-0" data-toggle="modal" data-target=".bd-example-modal-sm">Log In</button>
+
+                        <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                          <div class="modal-dialog modal-sm">
+                            <div class="modal-content">
+                              <form>
+                                  <div class="form-group">
+                                    <label for="exampleInputEmail1">Email address</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="exampleInputPassword1">Password</label>
+                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                  </div>
+                                  <button type="submit" class="btn btn-outline-info my-2 my-sm-0">Submit</button>
+                                </form>
+                            </div>
+                          </div>
+                        </div>
+                    </li>
+                     &nbsp
+                    <li>
+                        <button type="button" class="btn btn-outline-info my-2 my-sm-0" data-toggle="modal" data-target=".bd-example-modal-lg">Register</button>
+
+                    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                          <form>
+                                  <div class="form-group">
+                                    <label for="exampleInputEmail1">Email address</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                  </div>
+                                  <div class="form-group">
+                                  <label for="exampleInputFirstName">First Name</label>
+                                    <input type="firstName" class="form-control" id="exampleInputFirstName" aria-describedby="firstnameHelp" placeholder="Enter First Name">
+                                </div>
+                                <div class="form-group">
+                                  <label for="exampleInputLastName">Last Name</label>
+                                    <input type="lastName" class="form-control" id="exampleInputLastName" aria-describedby="lastnameHelp" placeholder="Enter Last Name">
+                                </div>
+                                <div class="form-group">
+                                  <label for="exampleInputAffiliation">Affiliation</label>
+                                    <input type="affiliation" class="form-control" id="exampleInputAffiliation" aria-describedby="affiliationHelp" placeholder="Enter Affiliation">
+                                </div>
+                                  <div class="form-group">
+                                    <label for="exampleInputPassword1">Password</label>
+                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                  </div>
+                                  <button type="submit" class="btn btn-outline-info my-2 my-sm-0">Submit</button>
+                                </form>
+                        </div>
+                      </div>
+                    </div>
                 </li>
-                &nbsp
-                <li class="nav-item-right">
-                    <button type="button" class="btn btn-outline-info my-2 my-sm-0">Register</button>
-                </li>
-                &nbsp
-                <li class="nav-item-right">
-                    <button type="button" class="btn btn-outline-info my-2 my-sm-0">Help</button>
-                </li>
+
+
             </ul>
         </nav>
 
@@ -189,6 +237,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+
+        <script src="js/modal.js"></script>
 
     </body>
 
