--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Patient Landing</title>
+        <title>S+ft Landing</title>
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,7 +34,7 @@
 
         <header>
             <div class="container-fluid">
-                <img class="logo-block" src="images/logo.png" alt="logo">
+                <img class="logo-block" src="images/logo.png" alt="logo2">
             </div>
             <nav>
                 <ul class="nav">
