--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
         <header>
             <div class="container-fluid">
-                <img class="logo-block" src="images/logo.png" alt="logo2">
+                <img class="logo-block" src="images/logo2.png" alt="logo2">
             </div>
             <nav>
                 <ul class="nav">
