--- a/public/index.html
+++ b/public/index.html
@@ -140,8 +140,8 @@
 
         <div class="container">
 
-            <h1>Explore Patient Landing</h1>
-            <p>Patient Landing is a service to help service providers and social workers match patients to the appropriate space for their stage of care.</p>
+            <h1>Explore S+ftLanding</h1>
+            <p>S+ftLanding is a service to help service providers and social workers match patients to the appropriate space for their stage of care.</p>
             <h1>Shelters in your Area</h1>
         </div>
 
