--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
         <header>
             <div class="container-fluid">
-                <img class="logo-block" src="images/logo2.png" alt="logo2">
+                <a href="index.html"><img class="logo-block" src="images/logo2.png" alt="logo2"></a>
             </div>
             <nav>
                 <ul class="nav">
@@ -54,14 +54,15 @@
                                     <label for="exampleInputPassword1">Password</label>
                                     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                                   </div>
-                                  <button type="submit" class="btn btn-outline-info my-2 my-sm-0">Submit</button>
+                                  <button type="submit" class="btn btn-outline-info my-2 my-sm-0"><a href="search.html">Submit</button>
+                                    
                                 </form>
                             </div>
                           </div>
                         </div>
                     </li>
                      &nbsp
-                    <li>
+                    <!-- <li>
                         <button type="button" class="btn btn-outline-info my-2 my-sm-0" data-toggle="modal" data-target=".bd-example-modal-lg">Register</button>
 
                     <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
@@ -94,9 +95,7 @@
                         </div>
                       </div>
                     </div>
-                </li>
-
-
+                </li> -->
             </ul>
         </nav>
 
@@ -108,7 +107,7 @@
                     <nav class="navbar navbar-light bg-light">
                         <form class="form-inline">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+                        <button class="btn btn-outline-info my-2 my-sm-0" type="submit"><a href="search.html">Search</button>
                         </form>
                     </nav>
                 </li>
