--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
         <header>
             <div class="container-fluid">
-                <a href="index.html"><img class="logo-block" src="images/logo2.png" alt="logo2"></a>
+                <a href="index.html"><img class="logo-block" src="images/logo.png" alt="logo"></a>
             </div>
             <nav>
                 <ul class="nav">
@@ -55,7 +55,7 @@
                                     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                                   </div>
                                   <button type="submit" class="btn btn-outline-info my-2 my-sm-0"><a href="search.html">Submit</button>
-                                    
+
                                 </form>
                             </div>
                           </div>
