--- a/public/book.html
+++ b/public/book.html
@@ -34,7 +34,7 @@
 
         <header>
             <div class="container-fluid">
-                <a href="index.html"><img class="logo-block" src="images/logo2.png" alt="logo2"></a>
+                <a href="index.html"><img class="logo-block" src="images/logo.png" alt="logo"></a>
             </div>
         
         </header>
