added form items

--- a/public/registerOrganization.html
+++ b/public/registerOrganization.html
@@ -63,14 +63,26 @@
 
         <div class="container">
           <form>
+              <form>
+            <div class="col-auto my-1">
+                  <label class="mr-sm-2" for="inlineFormCustomSelect">Housing Type</label>
+                  <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                    <option selected>Choose...</option>
+                    <option value="1">Emergency Shelter/option>
+                    <option value="2">Traditional Housing</option>
+                    <option value="3">Permanent Supportive Housing</option>
+                    <option value="4">Single Room Occupancy (SRO)</option>
+                    <option value="5">Voucher</option>
+                    <option value="6">Assisted Living</option>
+                  </select>
+                </div>
               <div class="form-row align-items-center">
                 <div class="form-group row">
-                <label for="inputAge" class="col-sm-2 col-form-label">Organization Name</label>
+                <label for="inputAge" class="col-sm-2 col-form-label">Age</label>
                 <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputAge" placeholder="Organization">
+                <input type="email" class="form-control" id="inputAge" placeholder="Age">
                 </div>
                 </div>
-                Who Do you Serve?
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Gender</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -81,7 +93,7 @@
                   </select>
                 </div>
                 <div class="col-auto my-1">
-                  <label class="mr-sm-2" for="inlineFormCustomSelect">Mental Illness</label>
+                  <label class="mr-sm-2" for="inlineFormCustomSelect">Children</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
                     <option selected>Choose...</option>
                     <option value="1">Yes</option>
@@ -89,7 +101,41 @@
                   </select>
                 </div>
                 <div class="col-auto my-1">
-                  <label class="mr-sm-2" for="inlineFormCustomSelect">Mobility</label>
+                  <label class="mr-sm-2" for="inlineFormCustomSelect">Domestic Violence</label>
+                  <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                    <option selected>Choose...</option>
+                    <option value="1">Yes</option>
+                    <option value="2">No</option>
+                  </select>
+                </div>
+                <div class="form-row align-items-center">
+                <div class="form-group row">
+                <label for="inputAge" class="col-sm-2 col-form-label">Diagnosis</label>
+                <div class="col-sm-10">
+                <input type="email" class="form-control" id="inputAge" placeholder="Diagnosis">
+                </div>
+                </div>
+                <div class="col-auto my-1">
+                  <label class="mr-sm-2" for="inlineFormCustomSelect">Mental Health Facilities</label>
+                  <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                    <option selected>Choose...</option>
+                    <option value="1">Inpatient</option>
+                    <option value="2">Pediatric</option>
+                    <option value="3">Geriatric</option>
+                  </select>
+                </div>
+                <div class="col-auto my-1">
+                  <label class="mr-sm-2" for="inlineFormCustomSelect">Mental Illness</label>
+                  <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                    <option selected>Choose...</option>
+                    <option value="1">Option 1</option>
+                    <option value="2">Option 2</option>
+                    <option value="3">Option 3</option>
+                    <option value="4">Option 4</option>
+                  </select>
+                </div>
+                <div class="col-auto my-1">
+                  <label class="mr-sm-2" for="inlineFormCustomSelect">Accessibility</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
                     <option selected>Choose...</option>
                     <option value="1">Yes</option>
@@ -120,7 +166,33 @@
                     <option value="1">Alcohol</option>
                     <option value="2">Heroin</option>
                     <option value="3">Crack</option>
-                    <option value="4">None</option>
+                    <option value="4">Cocaine</option>
+                    <option value="5">None</option>
+                  </select>
+                </div>
+                <div class="col-auto my-1">
+                  <label class="mr-sm-2" for="inlineFormCustomSelect">Methadone</label>
+                  <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                    <option selected>Choose...</option>
+                    <option value="1">Yes</option>
+                    <option value="2">No</option>
+                  </select>
+                </div>
+                <div class="col-auto my-1">
+                  <label class="mr-sm-2" for="inlineFormCustomSelect">Outpatient Abuse</label>
+                  <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                    <option selected>Choose...</option>
+                    <option value="1">AA</option>
+                    <option value="2">APRA</option>
+                    <option value="3">NA</option>
+                  </select>
+                </div>
+                <div class="col-auto my-1">
+                  <label class="mr-sm-2" for="inlineFormCustomSelect">Sobriety</label>
+                  <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                    <option selected>Choose...</option>
+                    <option value="1">Yes</option>
+                    <option value="2">No</option>
                   </select>
                 </div>
                 <div class="col-auto my-1">
@@ -135,32 +207,25 @@
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Insurance</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
                     <option selected>Choose...</option>
-                    <option value="1">Yes</option>
-                    <option value="2">No</option>
+                    <option value="1">None</option>
+                    <option value="2">Private</option>
+                    <option value="3">Medicare</option>
+                    <option value="4">Medicaid</option>
+                    <option value="5">Managed Medicare</option>
                   </select>
                 </div>
                 <div class="col-auto my-1">
-                  Tell us about your services
-                <div class="form-group row">
-                <label for="inputAge" class="col-sm-2 col-form-label">Number of Beds</label>
-                <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputbed" placeholder="Bed Quantity">
+                  <label class="mr-sm-2" for="inlineFormCustomSelect">Other Resources</label>
+                  <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                    <option selected>Choose...</option>
+                    <option value="1">Food</option>
+                    <option value="2">Medical</option>
+                    <option value="3">HIV</option>
+                    <option value="4">Homehealth care</option>
+                  </select>
                 </div>
-                </div>
-                <div class="form-group row">
-                  <label for="inputAge" class="col-sm-2 col-form-label">Of those, number instabook</label>
-                <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputinstabook" placeholder="Instabook">
-                </div>
-                </div>
-                <div class="form-group row">
-                <label for="inputAge" class="col-sm-2 col-form-label">Other Restricted beds</label>
-                <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputRestrictions" placeholder="Restrictions">
-                </div>
-                </div>
-
-                  <button type="submit" class="btn btn-primary"><a href="search.html">Submit</button>
+                <div class="col-auto my-1">
+                  <button type="submit" class="btn btn-outline-info my-2 my-sm-0"><a href="book.html">Submit</button>
                 </div>
               </div>
             </form>
