--- a/public/discharge.html
+++ b/public/discharge.html
@@ -42,7 +42,8 @@
         <nav>
           <button type="button" class="btn btn-outline-info my-2 my-sm-0">Intake</button>
           <button type="button" class="btn btn-outline-info my-2 my-sm-0">Discharge</button>
-          <button type="button" class="btn btn-outline-info my-2 my-sm-0">Messages about Patient</button>
+          <button type="button" class="btn btn-outline-info my-2 my-sm-0">Update Availability Preferences</button>
+          <button type="button" class="btn btn-outline-info my-2 my-sm-0">Add Patient</button>
             <ul class="nav">
                  <li>
                     <nav class="navbar navbar-light bg-light">
@@ -62,13 +63,12 @@
         <div class="container">
           <!-- <button type="button" class="btn btn-outline-info my-2 my-sm-0">Add Patient</button> -->
           <div class="row">
-            <div class="col-sm">
           <form>
             <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Housing Type</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
                     <option selected>Choose...</option>
-                    <option value="1">Emergency Shelter</option>
+                    <option value="1">Emergency Shelter/option>
                     <option value="2">Traditional Housing</option>
                     <option value="3">Permanent Supportive Housing</option>
                     <option value="4">Single Room Occupancy (SRO)</option>
@@ -76,13 +76,13 @@
                     <option value="6">Assisted Living</option>
                   </select>
                 </div>
-
-                <div class="col-auto my-1">
+              <div class="form-row align-items-center">
+                <div class="form-group row">
                 <label for="inputAge" class="col-sm-2 col-form-label">Age</label>
                 <div class="col-sm-10">
                 <input type="email" class="form-control" id="inputAge" placeholder="Age">
                 </div>
-
+                </div>
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Gender</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -92,7 +92,6 @@
                     <option value="3">Other</option>
                   </select>
                 </div>
-
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Children</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -101,7 +100,6 @@
                     <option value="2">No</option>
                   </select>
                 </div>
-
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Domestic Violence</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -110,13 +108,13 @@
                     <option value="2">No</option>
                   </select>
                 </div>
-
-                <div class="col-auto my-1">
+                <div class="form-row align-items-center">
+                <div class="form-group row">
                 <label for="inputAge" class="col-sm-2 col-form-label">Diagnosis</label>
                 <div class="col-sm-10">
                 <input type="email" class="form-control" id="inputAge" placeholder="Diagnosis">
                 </div>
-
+                </div>
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Mental Health Facilities</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -126,7 +124,6 @@
                     <option value="3">Geriatric</option>
                   </select>
                 </div>
-
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Mental Illness</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -137,7 +134,6 @@
                     <option value="4">Option 4</option>
                   </select>
                 </div>
-
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Accessibility</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -146,7 +142,6 @@
                     <option value="2">No</option>
                   </select>
                 </div>
-
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Homeless</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -156,7 +151,6 @@
                     <option value="3">No</option>
                   </select>
                 </div>
-
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Smoker</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -165,7 +159,6 @@
                     <option value="2">No</option>
                   </select>
                 </div>
-
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Substance Abuse</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -177,7 +170,6 @@
                     <option value="5">None</option>
                   </select>
                 </div>
-
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Methadone</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -186,7 +178,6 @@
                     <option value="2">No</option>
                   </select>
                 </div>
-
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Outpatient Abuse</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -196,7 +187,6 @@
                     <option value="3">NA</option>
                   </select>
                 </div>
-
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Sobriety</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -205,7 +195,6 @@
                     <option value="2">No</option>
                   </select>
                 </div>
-
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Veteran</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -214,7 +203,6 @@
                     <option value="2">No</option>
                   </select>
                 </div>
-
                  <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Insurance</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -226,7 +214,6 @@
                     <option value="5">Managed Medicare</option>
                   </select>
                 </div>
-
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Other Resources</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -237,14 +224,12 @@
                     <option value="4">Homehealth care</option>
                   </select>
                 </div>
-
                 <div class="col-auto my-1">
                   <button type="submit" class="btn btn-outline-info my-2 my-sm-0"><a href="book.html">Submit</button>
                 </div>
-
               </div>
             </form>
-          </div> 
+            
         </div>
 
         <div class="row">
