--- a/public/registerOrganization.html
+++ b/public/registerOrganization.html
@@ -62,13 +62,15 @@
         
 
         <div class="container">
+          <!-- <button type="button" class="btn btn-outline-info my-2 my-sm-0">Add Patient</button> -->
+          <div class="row">
+            <div class="col-sm">
           <form>
-              <form>
             <div class="col-auto my-1">
-                  <label class="mr-sm-2" for="inlineFormCustomSelect">Housing Type</label>
+                  <label class="mr-sm-2" for="inlineFormCustomSelect">Organization Type</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
                     <option selected>Choose...</option>
-                    <option value="1">Emergency Shelter/option>
+                    <option value="1">Emergency Shelter</option>
                     <option value="2">Traditional Housing</option>
                     <option value="3">Permanent Supportive Housing</option>
                     <option value="4">Single Room Occupancy (SRO)</option>
@@ -76,13 +78,13 @@
                     <option value="6">Assisted Living</option>
                   </select>
                 </div>
-              <div class="form-row align-items-center">
-                <div class="form-group row">
+                <h3>Who do you serve?</h3>
+                <div class="col-auto my-1">
                 <label for="inputAge" class="col-sm-2 col-form-label">Age</label>
                 <div class="col-sm-10">
                 <input type="email" class="form-control" id="inputAge" placeholder="Age">
                 </div>
-                </div>
+
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Gender</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -92,6 +94,7 @@
                     <option value="3">Other</option>
                   </select>
                 </div>
+
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Children</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -100,6 +103,7 @@
                     <option value="2">No</option>
                   </select>
                 </div>
+
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Domestic Violence</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -108,13 +112,13 @@
                     <option value="2">No</option>
                   </select>
                 </div>
-                <div class="form-row align-items-center">
-                <div class="form-group row">
+
+                <div class="col-auto my-1">
                 <label for="inputAge" class="col-sm-2 col-form-label">Diagnosis</label>
                 <div class="col-sm-10">
                 <input type="email" class="form-control" id="inputAge" placeholder="Diagnosis">
                 </div>
-                </div>
+
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Mental Health Facilities</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -124,6 +128,7 @@
                     <option value="3">Geriatric</option>
                   </select>
                 </div>
+
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Mental Illness</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -134,6 +139,7 @@
                     <option value="4">Option 4</option>
                   </select>
                 </div>
+
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Accessibility</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -142,6 +148,7 @@
                     <option value="2">No</option>
                   </select>
                 </div>
+
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Homeless</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -151,6 +158,7 @@
                     <option value="3">No</option>
                   </select>
                 </div>
+
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Smoker</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -159,6 +167,7 @@
                     <option value="2">No</option>
                   </select>
                 </div>
+
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Substance Abuse</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -170,6 +179,7 @@
                     <option value="5">None</option>
                   </select>
                 </div>
+
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Methadone</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -178,6 +188,7 @@
                     <option value="2">No</option>
                   </select>
                 </div>
+
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Outpatient Abuse</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -187,6 +198,7 @@
                     <option value="3">NA</option>
                   </select>
                 </div>
+
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Sobriety</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -195,6 +207,7 @@
                     <option value="2">No</option>
                   </select>
                 </div>
+
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Veteran</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -203,6 +216,7 @@
                     <option value="2">No</option>
                   </select>
                 </div>
+
                  <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Insurance</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -214,6 +228,7 @@
                     <option value="5">Managed Medicare</option>
                   </select>
                 </div>
+
                 <div class="col-auto my-1">
                   <label class="mr-sm-2" for="inlineFormCustomSelect">Other Resources</label>
                   <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -224,12 +239,14 @@
                     <option value="4">Homehealth care</option>
                   </select>
                 </div>
+
                 <div class="col-auto my-1">
                   <button type="submit" class="btn btn-outline-info my-2 my-sm-0"><a href="book.html">Submit</button>
                 </div>
+
               </div>
             </form>
-            
+          </div> 
         </div>
 
         <footer>
