--- a/public/book.html
+++ b/public/book.html
@@ -71,7 +71,9 @@
               <h4 class="card-title">
                 <a href="#">Community of Hope</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem! 1 Bed Available!</p>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+              <p>1 Bed Available!</p>
+              <p>Distance 1 mile</p>
             <button type="button" class="btn btn-outline-info my-2 my-sm-0">Book</button>
             </div>
           </div>
@@ -84,7 +86,9 @@
               <h4 class="card-title">
                 <a href="#">CCNV</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse. 4 Beds Available!</p>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
+              <p>4 Beds Available!</p>
+              <p>Distance .5 miles</p>
             <!-- Small modal -->
             <button type="button" class="btn btn-outline-info my-2 my-sm-0" data-toggle="modal" data-target=".bd-example-modal-sm">Book</button>
 
