--- a/public/discharge.html
+++ b/public/discharge.html
@@ -44,6 +44,15 @@
           <button type="button" class="btn btn-outline-info my-2 my-sm-0">Discharge</button>
           <button type="button" class="btn btn-outline-info my-2 my-sm-0">Update Availability Preferences</button>
           <button type="button" class="btn btn-outline-info my-2 my-sm-0">Add Patient</button>
+          <button type="button" class="btn btn-outline-info my-2 my-sm-0" data-toggle="modal" data-target=".bd-example-modal-sm">Messages about Patient</button>
+
+          <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-sm">
+          <div class="modal-content">
+                  <img src="images/Inbox.jpg">
+                </div>
+              </div>
+            </div>
             <ul class="nav">
                  <li>
                     <nav class="navbar navbar-light bg-light">
