--- a/public/registerOrganization.html
+++ b/public/registerOrganization.html
@@ -39,12 +39,23 @@
         
         </header>
 
-        <nav>
-          <button type="button" class="btn btn-outline-info my-2 my-sm-0">Intake</button>
-          <button type="button" class="btn btn-outline-info my-2 my-sm-0">Register Organization</button>
-          <button type="button" class="btn btn-outline-info my-2 my-sm-0">Discharge</button>
-          <button type="button" class="btn btn-outline-info my-2 my-sm-0">Update Availability Preferences</button>
-          <button type="button" class="btn btn-outline-info my-2 my-sm-0">Add Patient</button>
+         <nav>
+          <button type="button" class="btn btn-outline-info my-2 my-sm-0"><a href="registerOrganization.html">Update Availability Preferences</button>
+          <button type="button" class="btn btn-outline-info my-2 my-sm-0"><a href="addPatient.html">Add Patient</button>
+          <button type="button" class="btn btn-outline-info my-2 my-sm-0"><a href="registerOrganization.html">Register Organization</button>
+          <!-- Small modal -->
+          <button type="button" class="btn btn-outline-info my-2 my-sm-0" data-toggle="modal" data-target=".bd-example-modal-msg">Messages about Patient</button>
+
+          <div class="modal fade bd-example-modal-msg" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-msg">
+          <div class="modal-content">
+                  <img src="images/Inbox.jpg">
+                </div>
+              </div>
+            </div>
+
+
+
             <ul class="nav">
                  <li>
                     <nav class="navbar navbar-light bg-light">
