--- a/public/addPatient.html
+++ b/public/addPatient.html
@@ -40,19 +40,9 @@
         </header>
 
          <nav>
-          <button type="button" class="btn btn-outline-info my-2 my-sm-0"><a href="registerOrganization.html">Update Availability Preferences</button>
+          <button type="button" class="btn btn-outline-info my-2 my-sm-0"><a href="updateAvailability.html">Update Availability Preferences</button>
           <button type="button" class="btn btn-outline-info my-2 my-sm-0"><a href="addPatient.html">Add Patient</button>
-          <button type="button" class="btn btn-outline-info my-2 my-sm-0"><a href="registerOrganization.html">Register Organization</button>
-          <!-- Small modal -->
-          <button type="button" class="btn btn-outline-info my-2 my-sm-0" data-toggle="modal" data-target=".bd-example-modal-sm">Messages about Patient</button>
-
-          <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-sm">
-          <div class="modal-content">
-                  <img src="images/Inbox.jpg">
-                </div>
-              </div>
-            </div>
+      
 
 
 
@@ -61,7 +51,7 @@
                     <nav class="navbar navbar-light bg-light">
                         <form class="form-inline">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-info my-2 my-sm-0" type="submit"><a href="#">Search</button>
+                        <button class="btn btn-outline-info my-2 my-sm-0" type="submit"><a href="search.html">Search</button>
                         </form>
                     </nav>
                 </li>
