--- a/public/book.html
+++ b/public/book.html
@@ -41,8 +41,8 @@
 
          <nav>
           <button type="button" class="btn btn-outline-info my-2 my-sm-0"><a href="updateAvailability.html">Update Availability Preferences</button>
-          <button type="button" class="btn btn-outline-info my-2 my-sm-0"><a href="addPatient.html">Add Patient</button>
-      
+          <button type="button" class="btn btn-outline-info my-2 my-sm-0"><a href="addPatient.html">Add Patient</button>      
+          <button type="button" class="btn btn-outline-info my-2 my-sm-0"><a href="PatientMsg.html">Message about Patients</button>
 
 
 
